--- a/carwash/pubspec.yaml
+++ b/carwash/pubspec.yaml
@@ -41,6 +41,14 @@ dependencies:
   go_router: ^17.0.1
   uuid: ^4.5.2
   google_fonts: ^7.1.0
+  image_picker: ^1.2.1
+  firebase_storage: ^13.0.6
+  intl: ^0.20.2
+  pdf: ^3.11.3
+  printing: ^5.14.2
+  path_provider: ^2.1.5
+  share_plus: ^12.0.1
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
