--- a/carwash/pubspec.yaml
+++ b/carwash/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   path_provider: ^2.1.5
   share_plus: ^12.0.1
   url_launcher: ^6.3.2
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
