--- a/carwash/pubspec.yaml
+++ b/carwash/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   share_plus: ^12.0.1
   url_launcher: ^6.3.2
   cached_network_image: ^3.4.1
+  flutter_image_compress: ^2.4.0
 
 dev_dependencies:
   flutter_test:
