--- a/carwash/pubspec.yaml
+++ b/carwash/pubspec.yaml
@@ -51,6 +51,12 @@ dependencies:
   url_launcher: ^6.3.2
   cached_network_image: ^3.4.1
   flutter_image_compress: ^2.4.0
+  calendar_date_picker2: ^2.0.1
+  flutter_slider_drawer: ^3.0.2
+  quickalert: ^1.1.0
+  dropdown_search: ^6.0.2
+  easy_stepper: ^1.0.1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
