--- a/carwash/pubspec.yaml
+++ b/carwash/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   dropdown_search: ^6.0.2
   easy_stepper: ^1.0.1
   path: ^1.9.0
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
