--- a/carwash/pubspec.yaml
+++ b/carwash/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   easy_stepper: ^1.0.1
   path: ^1.9.0
   fl_chart: ^1.1.1
+  syncfusion_flutter_charts: ^32.2.3
 
 dev_dependencies:
   flutter_test:
